Mostly done w/ assignment 2, need to fix some spacing issues in the html though.

--- a/style.css
+++ b/style.css
@@ -76,3 +76,12 @@ a:link, a:visited, a:active
 	height: 316.4px;
 	border-radius: 150px;
 }
+.assign2Form tr
+{
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+.tab
+{
+	margin-left: 8px;
+}
